added tests and scripts

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,14 @@ annotated-types==0.6.0
 anyio==4.3.0
 async-timeout==4.0.3
 attrs==23.2.0
+blinker==1.7.0
+Brotli==1.1.0
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+colorama==0.4.6
+ConfigArgParse==1.7
 ctransformers==0.2.27
 dataclasses-json==0.6.4
 dnspython==2.6.1
@@ -14,8 +19,13 @@ email_validator==2.1.1
 exceptiongroup==1.2.0
 fastapi==0.110.0
 filelock==3.13.3
+Flask==3.0.2
+Flask-Cors==4.0.0
+Flask-Login==0.6.3
 frozenlist==1.4.1
 fsspec==2024.3.1
+gevent==24.2.1
+geventhttpclient==2.0.12
 greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
@@ -23,8 +33,11 @@ httptools==0.6.1
 httpx==0.27.0
 huggingface-hub==0.22.2
 idna==3.6
+importlib_metadata==7.1.0
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
+joblib==1.3.2
 jsonpatch==1.33
 jsonpointer==2.4
 langchain==0.1.14
@@ -32,34 +45,64 @@ langchain-community==0.0.30
 langchain-core==0.1.37
 langchain-text-splitters==0.0.1
 langsmith==0.1.38
+locust==2.24.1
 MarkupSafe==2.1.5
 marshmallow==3.21.1
+mpmath==1.3.0
+msgpack==1.0.8
 multidict==6.0.5
 mypy-extensions==1.0.0
+networkx==3.2.1
 numpy==1.24.4
 orjson==3.10.0
 packaging==23.2
+pillow==10.3.0
+pluggy==1.4.0
+psutil==5.9.8
 psycopg2-binary==2.9.9
 py-cpuinfo==9.0.0
+pycparser==2.22
 pydantic==2.6.4
 pydantic-extra-types==2.6.0
 pydantic-settings==2.2.1
 pydantic_core==2.16.3
+pytest==8.1.1
+pytest-html==4.1.1
+pytest-metadata==3.1.1
 python-dotenv==1.0.1
 python-multipart==0.0.9
+pywin32==306
 PyYAML==6.0.1
+pyzmq==25.1.2
+regex==2023.12.25
 requests==2.31.0
+roundrobin==0.0.4
+safetensors==0.4.2
+scikit-learn==1.4.1.post1
+scipy==1.12.0
+sentence-transformers==2.6.1
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.29
 starlette==0.36.3
+sympy==1.12
 tenacity==8.2.3
+textwrap3==0.9.2
+threadpoolctl==3.4.0
+tokenizers==0.15.2
+tomli==2.0.1
+torch==2.2.2
 tqdm==4.66.2
+transformers==4.39.2
 typing-inspect==0.9.0
 typing_extensions==4.10.0
 ujson==5.9.0
 urllib3==2.2.1
 uvicorn==0.29.0
-uvloop==0.19.0
 watchfiles==0.21.0
 websockets==12.0
+Werkzeug==3.0.2
 yarl==1.9.4
+zipp==3.18.1
+zope.event==5.0
+zope.interface==6.2
