--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 HOST=localhost
 PORT=5432
-USER=myuser
-PASSWORD=mypassword
-DATABASE=mydatabase
+USER=postgres
+PASSWORD=postgres
+DATABASE=postgres
