--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-HOST=localhost
+HOST=192.168.2.181
 PORT=5432
 USER=postgres
 PASSWORD=postgres
-DATABASE=postgres
+DATABASE=invoice
+GOOGLE_API_KEY="AIzaSyAKQ8_cgU2VzQ_ydN1S4gUs-mi6ObZvGtQ"
