--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-HOST=192.168.2.181
+HOST=192.168.2.236
 PORT=5432
-USER=postgres
-PASSWORD=postgres
-DATABASE=invoice
+USER=crossml
+PASSWORD=password
+DATABASE=invoice_agent
 GOOGLE_API_KEY="AIzaSyAKQ8_cgU2VzQ_ydN1S4gUs-mi6ObZvGtQ"
