--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
+accelerate==0.29.2
+accelerator==2024.3.8.dev1
 aiohttp==3.9.3
 aiosignal==1.3.1
+altair==5.3.0
 annotated-types==0.6.0
-antiorm==1.2.1
 anyio==4.3.0
 asgiref==3.8.1
-asttokens==2.4.1
 async-timeout==4.0.3
 attrs==23.2.0
-backcall==0.2.0
 backoff==2.2.1
 bcrypt==4.1.2
+blinker==1.7.0
+bottle==0.12.25
 build==1.2.1
 cachetools==5.3.3
 certifi==2024.2.2
@@ -18,65 +20,57 @@ chroma-hnswlib==0.7.3
 chromadb==0.4.24
 click==8.1.7
 coloredlogs==15.0.1
-comm==0.2.2
 ctransformers==0.2.27
 dataclasses-json==0.6.4
-db==0.1.1
-db-sqlite3==0.0.1
-debugpy==1.8.1
-decorator==5.1.1
 Deprecated==1.2.14
-dnspython==2.6.1
-email_validator==2.1.1
 exceptiongroup==1.2.0
-executing==2.0.1
-fastapi==0.110.0
-filelock==3.13.3
+fastapi==0.110.1
+filelock==3.13.4
 flatbuffers==24.3.25
 frozenlist==1.4.1
 fsspec==2024.3.1
+gitdb==4.0.11
+GitPython==3.1.43
+google-ai-generativelanguage==0.6.1
+google-api-core==2.18.0
+google-api-python-client==2.125.0
 google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.5.0
 googleapis-common-protos==1.63.0
-graphlib_backport==1.1.0
 greenlet==3.0.3
 grpcio==1.62.1
+grpcio-status==1.62.1
 h11==0.14.0
-httpcore==1.0.5
+httplib2==0.22.0
 httptools==0.6.1
-httpx==0.27.0
 huggingface-hub==0.22.2
 humanfriendly==10.0
-idna==3.6
+idna==3.7
 importlib-metadata==7.0.0
 importlib_resources==6.4.0
-ipykernel==6.29.4
-ipython==8.12.3
-itsdangerous==2.1.2
-jedi==0.19.1
 Jinja2==3.1.3
 jsonpatch==1.33
 jsonpointer==2.4
-jupyter_client==8.6.1
-jupyter_core==5.7.2
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
 kubernetes==29.0.0
-langchain==0.1.14
-langchain-community==0.0.30
-langchain-core==0.1.37
+langchain==0.1.15
+langchain-community==0.0.32
+langchain-core==0.1.41
 langchain-text-splitters==0.0.1
-langsmith==0.1.38
+langsmith==0.1.45
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.1
-matplotlib-inline==0.1.6
 mdurl==0.1.2
 mmh3==4.1.0
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.5
 mypy-extensions==1.0.0
-nest-asyncio==1.6.0
-networkx==3.1
-numpy==1.24.4
+networkx==3.3
+numpy==1.26.4
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu12==12.1.105
@@ -87,7 +81,7 @@ nvidia-curand-cu12==10.3.2.106
 nvidia-cusolver-cu12==11.4.5.107
 nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.19.3
-nvidia-nvjitlink-cu12==12.4.99
+nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.1.105
 oauthlib==3.2.2
 onnxruntime==1.17.1
@@ -104,66 +98,67 @@ opentelemetry-util-http==0.45b0
 orjson==3.10.0
 overrides==7.7.0
 packaging==23.2
-parso==0.8.3
-pexpect==4.9.0
-pickleshare==0.7.5
-platformdirs==4.2.0
+pandas==2.2.2
+pillow==10.3.0
 posthog==3.5.0
-prompt-toolkit==3.0.43
+proto-plus==1.23.0
 protobuf==4.25.3
 psutil==5.9.8
 psycopg2-binary==2.9.9
-ptyprocess==0.7.0
 pulsar-client==3.4.0
-pure-eval==0.2.2
 py-cpuinfo==9.0.0
+pyarrow==15.0.2
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pydantic==2.6.4
-pydantic-extra-types==2.6.0
-pydantic-settings==2.2.1
 pydantic_core==2.16.3
+pydeck==0.8.1b0
 Pygments==2.17.2
+pyparsing==3.1.2
 PyPika==0.48.9
 pyproject_hooks==1.0.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-python-multipart==0.0.9
+pytz==2024.1
 PyYAML==6.0.1
-pyzmq==25.1.2
+referencing==0.34.0
 regex==2023.12.25
 requests==2.31.0
 requests-oauthlib==2.0.0
 rich==13.7.1
+rpds-py==0.18.0
 rsa==4.9
 safetensors==0.4.2
+setproctitle==1.3.3
 shellingham==1.5.4
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.1
 SQLAlchemy==2.0.29
-stack-data==0.6.3
-starlette==0.36.3
+starlette==0.37.2
+streamlit==1.33.0
 sympy==1.12
 tenacity==8.2.3
 tokenizers==0.15.2
+toml==0.10.2
 tomli==2.0.1
+toolz==0.12.1
 torch==2.2.2
 tornado==6.4
 tqdm==4.66.2
-traitlets==5.14.2
-transformers==4.39.2
+transformers==4.39.3
 triton==2.2.0
-typer==0.12.0
-typer-cli==0.12.0
-typer-slim==0.12.0
+typer==0.12.3
 typing-inspect==0.9.0
-typing_extensions==4.10.0
-ujson==5.9.0
+typing_extensions==4.11.0
+tzdata==2024.1
+uritemplate==4.1.1
 urllib3==2.2.1
 uvicorn==0.29.0
 uvloop==0.19.0
+waitress==3.0.0
+watchdog==4.0.0
 watchfiles==0.21.0
-wcwidth==0.2.13
 websocket-client==1.7.0
 websockets==12.0
 wrapt==1.16.0
